<resources>
    <string name="app_name">Mokel-On</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="text_1">Haven\'t register yet?</string>
    <string name="text_2">Click Here!</string>
    <string name="text_3">Already Register?</string>
</resources>